--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <title>I am a Samwich</title>
   <script src="js/jquery.js"></script>
   <script src="js/main.js"></script>
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div class="container">
-    <h1><span class="coming">Coming soon</span><span class="dots"></span></h1>
+    <div class="navbar"></div>
+
   </div>
 
 </body>
