--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="container">
-    <div class="navbar"></div>
+  <div class="navbar">
+    <div class="navButtons">
+      <button class="button" id="to-top"><img src="images/arrow_up.png" alt="Back to Top"></button>
+      <button class="button" id="about-me">About Me</button>
+      <button class="button" id="projects">Projects</button>
+    </div>
+  </div>
 
+  <div class="container">
+    <h1 class="heading"></h1>
   </div>
 
 </body>
