heading animated, navbar changed to position fixed

--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
 <body>
   <div class="navbar">
     <div class="navButtons">
-      <button class="button" id="to-top"><img src="images/arrow_up.png" alt="Back to Top"></button>
+      <button class="button to-top" id="to-top"><img src="images/arrow_line.png" alt="Back to Top"></button>
       <button class="button" id="about-me">About Me</button>
       <button class="button" id="projects">Projects</button>
+      <button class="button" id="contact">Contact Me</button>
     </div>
   </div>
 
   <div class="container">
-    <h1 class="heading"></h1>
+    <h1 class="typed-heading"></h1>
+    <div class="content">
+      <div class="heading">
+        <h1>Hi, I'm Sam</h1>
+      </div>
+      <div class="contact"></div>
+      <div class="about"></div>
+      <div class="projects"></div>
+    </div>
   </div>
 
 </body>
