adding contact icons

--- a/index.html
+++ b/index.html
@@ -24,9 +24,29 @@
       <div class="heading">
         <h1>Hi, I'm Sam</h1>
       </div>
-      <div class="contact"></div>
-      <div class="about"></div>
-      <div class="projects"></div>
+      <div class="contact">
+        <div class="contact-details left">
+          <p>Phone</p>
+          <p>Email</p>
+          <p>LinkedIn</p>
+        </div>
+        <div class="contact-details right">
+          <p>GitHub</p>
+          <p>GA</p>
+          <p>Twitter</p>
+        </div>
+
+      </div>
+      <div class="about">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos facere cupiditate accusantium ad optio iure doloribus ab neque nostrum sapiente mollitia quis, cumque, consequuntur ullam velit. Facilis quia, accusamus soluta.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae nobis temporibus suscipit illo reprehenderit dolores corporis nisi, numquam magni tenetur veniam dolorem fuga, atque maxime. Ex maxime dignissimos, commodi saepe?</p>
+      </div>
+      <div class="projects">
+        <div class="project0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor accusamus, consequatur dolores. Dolore laborum, ipsam quisquam. Dolores magnam eaque accusantium, illo! Repellendus nisi possimus, et vero. Quidem consequatur, labore unde.</div>
+        <div class="project1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci molestias ratione eveniet odit, qui non, perferendis dolore aliquam alias labore. Dolorem quaerat exercitationem cum ducimus in, magnam animi magni nobis!</div>
+        <div class="project2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quas quisquam minus, dolor cum, sed ut expedita iste totam quam laborum autem eius quos perferendis obcaecati accusantium quidem aliquam quasi.</div>
+        <div class="project3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure cum maiores soluta provident in totam praesentium debitis nostrum dolorem nemo maxime, magni mollitia, vitae incidunt distinctio! Similique vero omnis amet!</div>
+      </div>
     </div>
   </div>
 
