--- a/index.html
+++ b/index.html
@@ -12,36 +12,136 @@
   <div class="navbar">
     <div class="navButtons">
       <button class="button to-top" id="to-top"><img src="images/arrow_line.png" alt="Back to Top"></button>
+      <button class="button" id="contact">Contact Me</button>
+      <button class="button" id="skills">Tools and Skills</button>
       <button class="button" id="about-me">About Me</button>
       <button class="button" id="projects">Projects</button>
-      <button class="button" id="contact">Contact Me</button>
     </div>
   </div>
 
   <div class="container">
+
     <h1 class="typed-heading"></h1>
+
     <div class="content">
+
       <div class="heading">
         <h1>Hi, I'm Sam</h1>
       </div>
-      <div class="contact">
-        <div class="contact-details left">
-          <p>Phone</p>
-          <p>Email</p>
-          <p>LinkedIn</p>
+
+      <div class="contact main-segment">
+        <h2>Contact me...</h2>
+        <div class="contact-details">
+          <p>
+            <img src="images/contact/phone-icon.png" class="contact-icon">
+            0447 464 726
+          </p>
+          <p>
+            <img src="images/contact/email-icon.png" class="contact-icon">
+            <a href="mailto:&#115;&#097;&#109;&#064;&#105;&#097;&#109;&#097;&#115;&#097;&#109;&#119;&#105;&#099;&#104;&#046;&#099;&#111;&#109;">
+              &#115;&#097;&#109;&#064;&#105;&#097;&#109;&#097;&#115;&#097;&#109;&#119;&#105;&#099;&#104;&#046;&#099;&#111;&#109;
+            </a>
+          </p>
+          <p>
+            <img src="images/contact/linkedin-icon.png" class="contact-icon">
+            <a href="http://au.linkedin.com/in/samhumphreys"
+             target="_blank">
+             LinkedIn Profile
+           </a>
+          </p>
         </div>
-        <div class="contact-details right">
-          <p>GitHub</p>
-          <p>GA</p>
-          <p>Twitter</p>
+        <div class="contact-details">
+          <p>
+            <img src="images/contact/github-icon.png" class="contact-icon">
+            <a href="http://github.com/SamHumphreys" target="_blank">
+              My GitHub Page
+            </a>
+          </p>
+          <p>
+            <img src="images/contact/ga-icon.png" class="contact-icon">
+            <a href="http://profiles.generalassemb.ly/profiles/sam-humphreys"
+              target="_blank">
+              General Assembly Profile
+            </a>
+          </p>
+          <p>
+            <img src="images/contact/twitter-icon.png" class="contact-icon">
+            <a href="http://twitter.com/iamasamwich" target="_blank">
+              @iamasamwich
+            </a>
+          </p>
         </div>
+      </div>
+
+      <div class="skills main-segment">
+        <h2>Skills and tools...</h2>
+        <div class="skill-row">
+          <div class="skill">
+            <img class="skills-img" src="images/skills/javascript.png" title="JavaScript">
+            <p>JavaScript</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/jquery.png" title="jQuery">
+            <p>jQuery</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/underscore.png" title="Underscore.js">
+            <p>Underscore.js</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/backbone.png" title="Backbone.js">
+            <p>Backbone.js</p>
+          </div>
+        </div>
+        <div class="skill-row">
+          <div class="skill">
+            <img class="skills-img" src="images/skills/ruby.png" title="Ruby">
+            <p>Ruby</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/ruby-on-rails.png" title="Ruby on Rails">
+            <p>Rails</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/postgresql.png">
+            <p>PostreSQL</p>
+          </div>
+        </div>
+        <div class="skill-row">
+          <div class="skill">
+            <img class="skills-img" src="images/skills/html.png" title="HTML">
+            <p>HTML</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/css.png" title="CSS">
+            <p>CSS</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/github-icon.png" title="GitHub">
+            <p>GitHub</p>
+          </div>
+          <div class="skill">
+            <img class="skills-img" src="images/skills/msoffice.png" title="MS Office">
+            <p>MS Office</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="about main-segment">
+        <h2>All about me...</h2>
+        <p>I am a Junior Full Stack Web Developer with a passion for JavaScript and a love of finding     logical solutions to complex problems.
+        </p>
+        <p>
+          I come from a Financial Services background where as an Operations Analyst I was responsible for the end to end settlement and post trade maintenance of internationally listed securities, OTC and listed warrants, structured products, options and unit trusts, and all of the corporate actions, transfers, payments and reconciliations which come along with those investment instruments.
+        </p>
+        <p>
+          As most of my time as a Operations Analyst was spent processing and manipulating spreadsheets in Excel, I was looking for ways to become more productive and started investigating different programming languages to help automate repetitive tasks I had in my workflow. These forays into coding helped me come to the realisation that I really enjoy
+        </p>
+
 
       </div>
-      <div class="about">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos facere cupiditate accusantium ad optio iure doloribus ab neque nostrum sapiente mollitia quis, cumque, consequuntur ullam velit. Facilis quia, accusamus soluta.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae nobis temporibus suscipit illo reprehenderit dolores corporis nisi, numquam magni tenetur veniam dolorem fuga, atque maxime. Ex maxime dignissimos, commodi saepe?</p>
-      </div>
-      <div class="projects">
+      <div class="projects main-segment">
         <div class="project0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor accusamus, consequatur dolores. Dolore laborum, ipsam quisquam. Dolores magnam eaque accusantium, illo! Repellendus nisi possimus, et vero. Quidem consequatur, labore unde.</div>
         <div class="project1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci molestias ratione eveniet odit, qui non, perferendis dolore aliquam alias labore. Dolorem quaerat exercitationem cum ducimus in, magnam animi magni nobis!</div>
         <div class="project2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quas quisquam minus, dolor cum, sed ut expedita iste totam quam laborum autem eius quos perferendis obcaecati accusantium quidem aliquam quasi.</div>
