added click listeners

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navButtons">
       <button class="button to-top" id="to-top"><img src="images/arrow_line.png" alt="Back to Top"></button>
       <button class="button" id="contact">Contact Me</button>
-      <button class="button" id="skills">Tools and Skills</button>
+      <button class="button" id="skills">Skills and Tools</button>
       <button class="button" id="about-me">About Me</button>
       <button class="button" id="projects">Projects</button>
     </div>
