--- a/index.html
+++ b/index.html
@@ -133,22 +133,149 @@
         <p>I am a Junior Full Stack Web Developer with a passion for JavaScript and a love of finding     logical solutions to complex problems.
         </p>
         <p>
-          I come from a Financial Services background where as an Operations Analyst I was responsible for the end to end settlement and post trade maintenance of internationally listed securities, OTC and listed warrants, structured products, options and unit trusts, and all of the corporate actions, transfers, payments and reconciliations which come along with those investment instruments.
+          I come from a Financial Services background where most of my time was spent processing and manipulating data in MS Excel. As a way to make myself more effective I started to learn Visual Basic to be able to write macros to automate some of my day to day tasks.
         </p>
         <p>
-          As most of my time as a Operations Analyst was spent processing and manipulating spreadsheets in Excel, I was looking for ways to become more productive and started investigating different programming languages to help automate repetitive tasks I had in my workflow. These forays into coding helped me come to the realisation that I really enjoy
+          This was my first foray into programming since finishing school, and my interest in coding was piqued again! I began investigating different programming languages, and JavaScript and Ruby were the two that appealed to me the most because of their use in web development. These were both covered by General Assembly's 12 week Web Development Immersive course, so I signed myself up and now here we are!
         </p>
+        <p class="last">
+          When I'm not in front of a computer I am usually either kitesurfing, swing dancing, discovering Sydney's bike paths, or playing the guitar.
+        </p>
+
 
 
       </div>
       <div class="projects main-segment">
-        <div class="project0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor accusamus, consequatur dolores. Dolore laborum, ipsam quisquam. Dolores magnam eaque accusantium, illo! Repellendus nisi possimus, et vero. Quidem consequatur, labore unde.</div>
-        <div class="project1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci molestias ratione eveniet odit, qui non, perferendis dolore aliquam alias labore. Dolorem quaerat exercitationem cum ducimus in, magnam animi magni nobis!</div>
-        <div class="project2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quas quisquam minus, dolor cum, sed ut expedita iste totam quam laborum autem eius quos perferendis obcaecati accusantium quidem aliquam quasi.</div>
-        <div class="project3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure cum maiores soluta provident in totam praesentium debitis nostrum dolorem nemo maxime, magni mollitia, vitae incidunt distinctio! Similique vero omnis amet!</div>
-      </div>
+        <h2>My projects...</h2>
+
+        <div class="project">
+          <div class="project-left">
+            <h3 class="project-name">Kit-Kat-Dog</h3>
+            <p class="project-heading">Tools and tech used:</p>
+            <p class="project-details">
+              <img src="images/skills/javascript.png" class="tech-logo">
+              <img src="images/skills/jquery.png" class="tech-logo">
+              <img src="images/skills/html.png" class="tech-logo">
+              <img src="images/skills/css.png" class="tech-logo">
+            </p>
+          </div>
+          <div class="project-right">
+            <img src="images/project-screenshots/kitkatdog.jpg">
+          </div>
+          <p class="project-heading">Description:</p>
+          <p class="project-details">This is a tic-tac-toe game which keeps a running score until the page is refreshed.
+          </p>
+          <p class="project-heading">Links:</p>
+          <p class="project-details">
+            <a href="http://samhumphreys.github.io/WDI-13-Project-0-/tictactoe/" target="_blank">
+              Play the game...
+            </a><br>
+            <a href="https://github.com/SamHumphreys/WDI-13-Project-0-/tree/master/tictactoe" target="_blank">
+              Check out the code...
+            </a>
+          </p>
+        </div>
+
+        <div class="project">
+          <div class="project-left">
+
+            <h3 class="project-name">LiveWithMe</h3>
+            <p class="project-heading">Tools and tech used:</p>
+            <p class="project-details">
+              <img src="images/skills/javascript.png" class="tech-logo">
+              <img src="images/skills/jquery.png" class="tech-logo">
+              <img src="images/skills/ruby.png" class="tech-logo">
+              <img src="images/skills/ruby-on-rails.png" class="tech-logo">
+              <img src="images/skills/html.png" class="tech-logo">
+              <img src="images/skills/css.png" class="tech-logo">
+            </p>
+          </div>
+          <div class="project-right">
+            <img src="images/project-screenshots/livewithme.jpg">
+          </div>
+          <p class="project-heading">Description:</p>
+          <p class="project-details">The purpose of LiveWithMe is to help people in share houses connect with flatmates. Once you have created your account you can search for available listings, or create your own listing if you are seeking a flatmate. The listings can be set as either available or unavailable by the user who created the listing to stop them from appearing in search results.
+          </p>
+          <p class="project-heading">Links:</p>
+          <p class="project-details">
+            <a href="https://livewithme.herokuapp.com/" target="_blank">
+              Check out the site...
+            </a><br>
+            <a href="https://github.com/SamHumphreys/livewithme" target="_blank">
+              Check out the code...
+            </a>
+          </p>
+        </div>
+
+        <div class="project">
+          <div class="project-left">
+            <h3 class="project-name">Cookr</h3>
+            <p class="project-heading">Tools and tech used:</p>
+            <p class="project-details">
+              <img src="images/skills/javascript.png" class="tech-logo">
+              <img src="images/skills/jquery.png" class="tech-logo">
+              <img src="images/skills/underscore.png" class="tech-logo">
+              <img src="images/skills/ruby.png" class="tech-logo">
+              <img src="images/skills/ruby-on-rails.png" class="tech-logo">
+              <img src="images/skills/html.png" class="tech-logo">
+              <img src="images/skills/css.png" class="tech-logo">
+            </p>
+          </div>
+          <div class="project-right">
+            <img src="images/project-screenshots/cookr.jpg">
+          </div>
+          <p class="project-heading">Description:</p>
+          <p class="project-details">Cookr is an app designed to help users organise dinner parties by hiring chefs who have registered with the site. A chef can upload a list of menu options that they have available, and the dinner hosts can search through the menus that have been uploaded and create an event where the relevant chef will cook the selected menu for the host.
+          </p>
+          <p class="project-details">This app was created as a group project, and my main contribution was the messaging service that the app contains. When a host creates an event a message is sent to the selected chef, who can then respond or discuss details of the event.
+          </p>
+          <p class="project-heading">Links:</p>
+          <p class="project-details">
+            <a href="http://cookrapp.herokuapp.com/" target="_blank">
+              Check out the site...
+            </a><br>
+            <a href="https://github.com/minikus/Cookr" target="_blank">
+              Check out the code...
+            </a>
+          </p>
+        </div>
+
+
+        <div class="project">
+          <div class="project-left">
+            <h3 class="project-name">MessageMe/Howlr</h3>
+            <p class="project-heading">Tools and tech used:</p>
+            <p class="project-details">
+              <img src="images/skills/javascript.png" class="tech-logo">
+              <img src="images/skills/jquery.png" class="tech-logo">
+              <img src="images/skills/underscore.png" class="tech-logo">
+              <img src="images/skills/ruby.png" class="tech-logo">
+              <img src="images/skills/ruby-on-rails.png" class="tech-logo">
+              <img src="images/skills/html.png" class="tech-logo">
+              <img src="images/skills/css.png" class="tech-logo">
+            </p>
+          </div>
+          <div class="project-right">
+            <img src="images/project-screenshots/howlr.jpg">
+          </div>
+          <p class="project-heading">Description:</p>
+          <p class="project-details">After completing Cookr I created MessageMe/Howlr as a messaging app using Websockets to transfer data to and from the server rather than Ajax polling.
+          </p>
+          <p class="project-details">Once a user has logged in they can see a list of all users, view their conversation history with each user and send a new message to another user. The page updates with the number of unread messages, and if a conversation has unread messages the person who sent the message will be coloured red.
+          </p>
+          <p class="project-heading">Links:</p>
+          <p class="project-details">
+            <a href="http://howlatthemoon.herokuapp.com/" target="_blank">
+              Check out the site...
+            </a><br>
+            <a href="https://github.com/SamHumphreys/messageme" target="_blank">
+              Check out the code...
+            </a>
+          </p>
+        </div>
+
+
     </div>
   </div>
-
 </body>
 </html>
