I seem to have updated something since the last commit

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="navbar">
     <div class="navButtons">
-      <button class="button to-top" id="to-top"><img src="images/arrow_line.png" alt="Back to Top"></button>
       <button class="button" id="contact">Contact Me</button>
       <button class="button" id="skills">Skills and Tools</button>
       <button class="button" id="about-me">About Me</button>
       <button class="button" id="projects">Projects</button>
+      <button class="button to-top" id="to-top"><img src="images/arrow_line.png" alt="Back to Top"></button>
     </div>
   </div>
 
@@ -278,4 +278,7 @@
     </div>
   </div>
 </body>
+<footer>
+  Made by Sam Humphreys 2016
+</footer>
 </html>
