fixed postgresql typo

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
           <div class="skill">
             <img class="skills-img" src="images/skills/postgresql.png">
-            <p>PostreSQL</p>
+            <p>PostgreSQL</p>
           </div>
         </div>
         <div class="skill-row">
