adding debouncer to the to-top button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button class="button" id="skills">Skills and Tools</button>
       <button class="button" id="about-me">About Me</button>
       <button class="button" id="projects">Projects</button>
-      <button class="button to-top hidden" id="to-top">
+      <button class="button to-top" id="to-top">
         <img src="images/arrow_line.png" id="up-arrow" alt="Back to Top">
       </button>
     </div>
