debounce sorted out

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button class="button" id="about-me">About Me</button>
       <button class="button" id="projects">Projects</button>
       <button class="button to-top" id="to-top">
-        <img src="images/arrow_line.png" id="up-arrow" alt="Back to Top">
+        <img src="images/arrow_line.png" id="up-arrow" class="up-arrow" alt="Back to Top">
       </button>
     </div>
   </div>
@@ -48,7 +48,7 @@
             <img src="images/contact/linkedin-icon.png" class="contact-icon">
             <a href="http://au.linkedin.com/in/samhumphreys"
              target="_blank">
-             LinkedIn Profile
+             LinkedIn
            </a>
           </p>
         </div>
@@ -141,7 +141,7 @@
           This was my first foray into programming since finishing school, and my interest in coding was piqued again! I began investigating different programming languages, and JavaScript and Ruby were the two that appealed to me the most because of their use in web development. These were both covered by General Assembly's 12 week Web Development Immersive course, so I signed myself up and now here we are!
         </p>
         <p class="last">
-          When I'm not in front of a computer I am usually either kitesurfing, swing dancing, discovering Sydney's bike paths, or playing the guitar.
+          When I'm not in front of a computer I am usually either kitesurfing, playing the guitar, swing dancing, or discovering my local bike paths.
         </p>
 
 
