page update 1 Apr 2017

--- a/index.html
+++ b/index.html
@@ -32,47 +32,41 @@
       </div>
 
       <div class="contact main-segment">
-        <h2>Contact me...</h2>
-        <div class="contact-details">
-          <p>
-            <img src="images/contact/phone-icon.png" class="contact-icon">
-            0447 464 726
-          </p>
-          <p>
-            <img src="images/contact/email-icon.png" class="contact-icon">
-            <a href="mailto:&#115;&#097;&#109;&#064;&#105;&#097;&#109;&#097;&#115;&#097;&#109;&#119;&#105;&#099;&#104;&#046;&#099;&#111;&#109;">
-              &#115;&#097;&#109;&#064;&#105;&#097;&#109;&#097;&#115;&#097;&#109;&#119;&#105;&#099;&#104;&#046;&#099;&#111;&#109;
-            </a>
-          </p>
-          <p>
-            <img src="images/contact/linkedin-icon.png" class="contact-icon">
-            <a href="http://au.linkedin.com/in/samhumphreys"
-             target="_blank">
-             LinkedIn
-           </a>
-          </p>
-        </div>
-        <div class="contact-details">
-          <p>
-            <img src="images/contact/github-icon.png" class="contact-icon">
-            <a href="http://github.com/SamHumphreys" target="_blank">
-              My GitHub Page
-            </a>
-          </p>
-          <p>
-            <img src="images/contact/ga-icon.png" class="contact-icon">
-            <a href="http://profiles.generalassemb.ly/profiles/sam-humphreys"
-              target="_blank">
-              General Assembly Profile
-            </a>
-          </p>
-          <p>
-            <img src="images/contact/twitter-icon.png" class="contact-icon">
-            <a href="http://twitter.com/iamasamwich" target="_blank">
-              @iamasamwich
-            </a>
-          </p>
-        </div>
+        <table>
+          <th>
+            <h2>Contact me...</h2>
+          </th>
+          <tr class='contact-row'>
+            <td>
+              <img src="images/contact/email-icon.png" class="contact-icon">
+              <a href="mailto:&#115;&#097;&#109;&#064;&#105;&#097;&#109;&#097;&#115;&#097;&#109;&#119;&#105;&#099;&#104;&#046;&#099;&#111;&#109;">
+                &#115;&#097;&#109;&#064;&#105;&#097;&#109;&#097;&#115;&#097;&#109;&#119;&#105;&#099;&#104;&#046;&#099;&#111;&#109;
+              </a>
+            </td>
+            <td>
+              <img src="images/contact/github-icon.png" class="contact-icon">
+              <a href="http://github.com/SamHumphreys" target="_blank">
+                My GitHub Page
+              </a>
+            </td>
+          </tr>
+          <tr class='contact-row'>
+            <td>
+              <img src="images/contact/linkedin-icon.png" class="contact-icon">
+              <a href="http://au.linkedin.com/in/samhumphreys"
+               target="_blank">
+               LinkedIn
+              </a>
+            </td>
+            <td>
+              <img src="images/contact/twitter-icon.png" class="contact-icon">
+              <a href="https://twitter.com/iamasamwich"
+               target="_blank">
+               Twitter
+              </a>
+            </td>
+          </tr>
+        </table>
       </div>
 
       <div class="skills main-segment">
@@ -87,12 +81,12 @@
             <p>jQuery</p>
           </div>
           <div class="skill">
-            <img class="skills-img" src="images/skills/underscore.png" title="Underscore.js">
-            <p>Underscore.js</p>
+            <img class="skills-img" src="images/skills/react-logo.png" title="Underscore.js">
+            <p>ReactJS</p>
           </div>
           <div class="skill">
-            <img class="skills-img" src="images/skills/backbone.png" title="Backbone.js">
-            <p>Backbone.js</p>
+            <img class="skills-img" src="images/skills/nodejs.png" title="Backbone.js">
+            <p>Node.js</p>
           </div>
         </div>
         <div class="skill-row">
