updated bio and added tic tac toe 3d

--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 
       <div class="about main-segment">
         <h2>All about me...</h2>
-        <p>I am a Junior Full Stack Web Developer with a passion for JavaScript and a love of finding     logical solutions to complex problems.
+        <p>I am a Junior Full Stack Web Developer with a passion for JavaScript and a love of finding logical solutions to complex problems.
         </p>
         <p>
-          I come from a Financial Services background where most of my time was spent processing and manipulating data in MS Excel. As a way to make myself more effective I started to learn Visual Basic to be able to write macros to automate some of my day to day tasks.
+          I come from a Financial Services Operations background, and in an attempt to streamline processes when using Excel I started to learn VBA; this piqued my interest in coding enough to enroll in General Assembly's 12 week Web Development Immersive course.
         </p>
         <p>
-          This was my first foray into programming since finishing school, and my interest in coding was piqued again! I began investigating different programming languages, and JavaScript and Ruby were the two that appealed to me the most because of their use in web development. These were both covered by General Assembly's 12 week Web Development Immersive course, so I signed myself up and now here we are!
+          The WDI course focused on coding in Ruby on Rails and Vanilla JavaScript, and since the course I have been learning NodeJS and ReactJS.
         </p>
         <p class="last">
           When I'm not in front of a computer I am usually either kitesurfing, playing the guitar, swing dancing, or discovering my local bike paths.
@@ -146,27 +146,26 @@
 
         <div class="project">
           <div class="project-left">
-            <h3 class="project-name">Kit-Kat-Dog</h3>
+            <h3 class="project-name">Tic Tac Toe 3D</h3>
             <p class="project-heading">Tools and tech used:</p>
             <p class="project-details">
+              <img src="images/skills/react-logo.png" class="tech-logo">
               <img src="images/skills/javascript.png" class="tech-logo">
-              <img src="images/skills/jquery.png" class="tech-logo">
               <img src="images/skills/html.png" class="tech-logo">
               <img src="images/skills/css.png" class="tech-logo">
             </p>
           </div>
           <div class="project-right">
-            <img src="images/project-screenshots/kitkatdog.jpg">
+            <img src="images/project-screenshots/tictactoe3d.jpg">
           </div>
           <p class="project-heading">Description:</p>
-          <p class="project-details">This is a tic-tac-toe game which keeps a running score until the page is refreshed.
-          </p>
+          <p class="project-details">A Tic Tac Toe played over multiple layers built using ReactJS.</p>
           <p class="project-heading">Links:</p>
           <p class="project-details">
-            <a href="http://samhumphreys.github.io/WDI-13-Project-0-/tictactoe/" target="_blank">
+            <a href="http://tic-tac-toe-3d.herokuapp.com/" target="_blank">
               Play the game...
             </a><br>
-            <a href="https://github.com/SamHumphreys/WDI-13-Project-0-/tree/master/tictactoe" target="_blank">
+            <a href="https://github.com/SamHumphreys/ReactJS-Tic-Tac-Toe-3D" target="_blank">
               Check out the code...
             </a>
           </p>
